abstract complete, discussion almost done

--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -1,10 +1,16 @@
 % !TEX root =  ../main_manuscript.tex 
 \begin{abstract}
-\texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance undergo repeat biopsies. Treatment is provided upon detection of biopsy Gleason upgrade.\\
-\texttt{Objective}: Reduce the number of biopsies for patients who do not need them\\
-\texttt{Design, Setting, and Participants}: adadadad\\
-\texttt{Outcome Measurements, and Statistical Analysis}: adadadad\\
-\texttt{Results and Limitations}: adadadad\\
-\texttt{Conclusions}: adadadad\\
-\texttt{Patient Summary}: adadadad
+\texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance (AS) undergo repeat biopsies. Treatment is advised when biopsy Gleason~$\geq$~7 (GS7). Many patients never obtain GS7, yet undergo biopsies frequently.\\
+
+\texttt{Objective}: Better balance the number of biopsies and time delay in detection of GS7.\\
+
+\texttt{Design, Setting, and Participants}: World's largest AS study PRIAS, 7813 patients, 1134 obtained GS7, 100 medical centers in 17 countries, common study protocol as well as web-based tool for data collection.\\
+
+\texttt{Outcome Measurements, and Statistical Analysis}: Prostate-specific antigen (PSA) measured every six months, repeat biopsies scheduled every one to three years. A Bayesian joint model was fitted to the observed time of GS7 and longitudinal PSA measurements. Predictions for GS7 externally validated in five largest AS cohorts (GAP3 database). Predictions used to develop risk based biopsy schedules. Comparison made with fixed schedules on the basis of total biopsies and expected delay in detection of GS7.\\
+
+\texttt{Results and Limitations}: Median time of GS7 in PRIAS $>$ 10 years. Rate of change of (log-transformed) PSA was a stronger predictor of GS7 (Hazard~Ratio:~2.45,~95\%CI: 1.83--2.95) than PSA value (Hazard~Ratio:~1.00,~95\%CI:~0.98--1.02). Internal validation: Time varying area under ROC curve for GS7 prediction ranged between 0.xx and 0.xx, and prediction error between 0.xx and 0.xx. External validation: Results similar to internal validation only for Toronto and Johns Hopkins cohorts.\\
+
+\texttt{Conclusions}: We developed risk based biopsy schedules as an alternative to fixed schedules. We hope to enable better biopsy decisions as we also provide for both types of schedules, the total biopsies and expected delay in detection of GS7. Our methodology updates itself as more patient data is gathered over follow-up.
+
+\texttt{Patient Summary}: An alternative to fixed and frequent biopsies for all patients are the risk based biopsy schedules proposed in this work. These are tailored individually for each patient, and offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
 \end{abstract}
