--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,5 +1,11 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-Resources are more for only serious patients, better decisions like in the case of prostatectomy patients....so personalized approch can lead to better decisions overall as well
+We developed a novel methodology for personalized decision making of biopsies in low-risk PCa patients enrolled in AS programs. In this methodology patients are first provided risk of reclassification based personalized biopsy schedules, as an alternative to fixed and frequent biopsy schedules (e.g., annual biopsies). Subsequently, to assist patients in making an appropriate choice among the personalized and fixed schedules, we also provide them the consequences of following each schedule. More specifically, for each schedule we give the total number of biopsies (burden), the time at which they will be conducted, and the expected delay in detection of reclassification. This delay is estimated after accounting for the probability of not having any reclassification at all over the follow-up period. Lastly, our approach dynamically updates the aforementioned schedules and consequences as more patient data becomes available over follow-up. 
 
- Such a shared random effect structure allows easy addition of more disease progression indicators (e.g., MRI information) when they are available in future. Furthermore, this structure also allows the follow-up schedule for outcomes/biopsies to depend on the observed values of each other. This is especially important because yearly biopsies in the PRIAS program are scheduled on the basis of the observed PSA doubling time of a patient.
+The aforementioned methodology is based on the world's largest PCa AS program, PRIAS. Consequently, a lot of patients may get benefited from this study. To this end, we have developed a web-application implementing our methodology. The web-application only requires patient data in well known file formats (e.g., SPSS, CSV etc.), but does not require any separate integration with the electronic health record of the PRIAS program. We hope that this will lead to improvement in the shared decision making of biopsies, with patients having objective estimates of the consequences of their decisions. 
+
+\textbf{Clinical implications:} The median survival time for reclassification is more than ten years in PRIAS. That is, more than 50\% patients do not require any biopsy during the first ten years of follow-up. The situation is similar in many other cohorts. Hence frequent biopsies may not be recommended for all patients.
+
+Existing work on reducing the burden of biopsies in AS primarily advocates less frequent heuristic schedules of biopsies \citep{inoue2018comparative} (e.g., biopsies biennially instead of annually). To our knowledge, risk-based biopsy schedules have barely been explored yet in AS \citep{nieboer2018active,bruinsma2016active}. The part of our results pertaining to the fixed/heuristic schedules is comparable with corresponding results obtained in existing work \citep{inoue2018comparative}, even though the AS cohorts are not the same. Thus, we anticipate similar validity for the results pertaining to the personalized schedules.
+
+Our work has certain limitations. The prediction model that we developed is valid only for the first thirteen years of follow-up in AS, whereas PCa in AS patients progresses slowly. This issue can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. The results of external validation indicate that the use of our model may be restricted in cohorts with AUC, and RMSPE results similar to that of PRIAS. To this end, in other cohorts, refitting the model to their dataset will be required before making risk based schedules, and estimating the consequences of each schedule. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging. Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes  (see Figure \ref{fig:jm_blockdiag}), mainly entails sharing the random effects in the joint model structure. Since MRI scans are expensive in developing countries, our model can also be used to trigger MRI scans. Lastly, in this study focus only on biopsy Gleason upgrade (reclassification). In this regard, accounting for competing risks (see Table \ref{table:prias_summary}), and for inter-observer variation \citep{coley2017prediction} in biopsy Gleason scores can be interesting to investigate further.
